--- a/morpheus/dev/ui/morpheus-ui.scss
+++ b/morpheus/dev/ui/morpheus-ui.scss
@@ -13,8 +13,8 @@ $bg-transparent: #000c159f;
 #morpheus-ui-trigger {
     
     position: fixed;
-    bottom: 70px;
-    left: 21px;
+    bottom: 1rem;
+    left: 1rem;
     z-index: 2147483647 !important;
     filter: grayscale(.7);
 
