--- a/morphSrc/globals.scss
+++ b/morphSrc/globals.scss
@@ -11,6 +11,11 @@ body {
     padding-right: $side-bar-width;
 }
 
+.test-input {
+    background-color: white;
+    color: black;
+}
+
 #root {
     width: 100vw;
     height: 100vh;
