--- a/morphSrc/globals.scss
+++ b/morphSrc/globals.scss
@@ -7,6 +7,30 @@ $secondary: #a5f9fc;
 $secondary-darker: #005c5f;
 $secondary-darkest: #031b27;
 
+
+:root {
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: black;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
 body {
     padding-right: $side-bar-width;
 }
