--- a/morphSrc/globals.scss
+++ b/morphSrc/globals.scss
@@ -94,6 +94,21 @@ body {
     backdrop-filter: blur(3px);
 }
 
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 2s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 
 .logo-wrapper {
     padding: 0.5rem 1rem;
