--- a/morpheus/dev/ui/morpheus-ui.scss
+++ b/morpheus/dev/ui/morpheus-ui.scss
@@ -83,6 +83,9 @@ $bg-transparent: #000c159f;
     .logo {
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
+        background-color: #00000052;
+        border-bottom: 1px solid #0e6e9e;
+        box-shadow: inset 0 -6px 16px -4px #0f469e;
     }
 
 
