--- a/morphSrc/globals.scss
+++ b/morphSrc/globals.scss
@@ -242,3 +242,15 @@ body {
     border: 1px solid #031b27;
     border-radius: .25rem;
 }
+
+.test-component {
+    padding: 1rem;
+    border: 2px solid #991b1b;;
+    border-radius: .5rem;
+    color: #991b1b;
+    box-shadow: inset 0 8px 37px -14px #991b1b;
+    margin: 1rem;
+    background-image: url( '/grid.png' );
+    background-size: 35%;
+    background-position: 50%;
+}
