--- a/morpheus/dev/ui/morpheus-ui.scss
+++ b/morpheus/dev/ui/morpheus-ui.scss
@@ -234,14 +234,17 @@ $bg-transparent: #000c159f;
 }
 
 .morpheus-error-box {
+
+    $color: #991b1b;
+
     padding: 1rem;
-    border: 2px solid #991b1b;;
+    border: 1px solid $color;
     border-radius: .5rem;
-    color: #991b1b;
-    box-shadow: inset 0 8px 37px -14px #991b1b;
+    color: $color;
+    box-shadow: inset 0 8px 37px -14px $color;
     margin: 1rem;
     background-image: url( '/grid.png' );
-    background-size: 35%;
+    background-size: 30%;
     background-position: 50%;
 }
 
